Oko postova add i remove akcije.
